--- a/app/frontend/styles/globals.css
+++ b/app/frontend/styles/globals.css
@@ -5,7 +5,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #1e1e1e;
-  overflow:visible;
+  overflow:scroll;
+ 
 }
 
 a {
